@@ -1,5 +1,9 @@
 2010-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Testsuite coverage for bogus macro file serial numbers.
+	* tests/acloca18.test: Also test ill-formed serial numbers
+	and serial numbers after macro definitions.
+
 	Coverage for aclocal diagnosing underquoted macros.
 	* tests/acloca23.test: New test.
 	* tests/Makefile.am: Update.
